Bug 431626 - The Knetattach dialog is no longer launched from the Dolphin (a required item is missing)
Summary: The Knetattach dialog is no longer launched from the Dolphin (a required item...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.12.1
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 431807 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-01-15 07:48 UTC by Nova
Modified: 2022-02-15 23:32 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04
Sentry Crash Report:


Attachments
Dolphin - no add network share button (92.80 KB, image/png)
2021-01-15 14:57 UTC, Yaroslav Sidlovsky
Details
b1cadeba939155282a9fadf7d7b025d6529c489e.patch (6.90 KB, patch)
2021-01-15 15:32 UTC, Yaroslav Sidlovsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nova 2021-01-15 07:48:46 UTC
SUMMARY
Before 20.12, I was able to double click on the network folder (network:/) and the knetattach dialog would appear, however since updating to 20.12, I no longer get the knetattach dialog but instead I get a folder page listing all of the shares on my network (not ones I manually had to add to dolphin)


STEPS TO REPRODUCE
1. Update to 20.12
2. Double click network folder
3. Notice that knetattach doesn't open

OBSERVED RESULT
The knetattach dialog does not appear

EXPECTED RESULT
The knetattach dialog should be appearing when I double click on the network folder


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.20.5
KDE Frameworks Version:  5.78.0
Qt Version: 5.12.2
Distro: EndeavourOS 

ADDITIONAL INFORMATION
Comment 1 Anton K 2021-01-15 12:10:09 UTC
there was always a special item, but it disappeared

https://docs.kde.org/trunk5/en/kde-workspace/knetattach/screenshot1.png
Comment 2 Nate Graham 2021-01-15 14:27:22 UTC
This is an intentional change; we removed the "Add network folder" item from the view, and put it Dolphin's toolbar when visiting the "Network" location.

Unfortunately, the change to remove it was made in Frameworks 5.78, while the change to put it in the toolbar was made in Dolphin 21.04, and these two products have different release schedules. As a result, the item is now missing for everyone, and will be until Dolphin 21.04 is released in a few months.

I'm sorry for this regression. We were hoping nobody would notice, but I suppose you did. :) It's time-limited, thankfully.
Comment 3 Nova 2021-01-15 14:35:59 UTC
(In reply to Nate Graham from comment #2)
> This is an intentional change; we removed the "Add network folder" item from
> the view, and put it Dolphin's toolbar when visiting the "Network" location.
> 
> Unfortunately, the change to remove it was made in Frameworks 5.78, while
> the change to put it in the toolbar was made in Dolphin 21.04, and these two
> products have different release schedules. As a result, the item is now
> missing for everyone, and will be until Dolphin 21.04 is released in a few
> months.
> 
> I'm sorry for this regression. We were hoping nobody would notice, but I
> suppose you did. :) It's time-limited, thankfully.

RIP, thanks for the info! I'll go ahead and downgrade Dolphin and wait until an update rolls out for both packages :D
Comment 4 Nate Graham 2021-01-15 14:39:22 UTC
You're welcome. You would actually want to downgrade KIO (to 5.77), or *upgrade* Dolphin (to 21.04). However note that downgrading KIO will also re-expose you to Bug 430374 which is pretty nasty.
Comment 5 Christoph Feck 2021-01-15 14:41:40 UTC
Kubuntu will ship Frameworks 5.78 (or later), but not the 21.04 versions of the applications, so people will certainly notice for the next ten months.
Comment 6 Nate Graham 2021-01-15 14:42:58 UTC
Urth that sucks. I'll send a message to the distro mailing list telling them what they can cherry-pick to improve this situation.
Comment 7 Yaroslav Sidlovsky 2021-01-15 14:54:57 UTC
I have Dolphin 20.12.1 and KF5-5.78.0.
Still I can't find this button on the toolbar.
What's wrong?
Comment 8 Nate Graham 2021-01-15 14:56:12 UTC
You need Dolphin 21.04 which has not been released yet. So you would need to built it from source or get your distro to patch it in for you. I'm sending distros an email about this right now.
Comment 9 Yaroslav Sidlovsky 2021-01-15 14:57:07 UTC
Created attachment 134893 [details]
Dolphin - no add network share button
Comment 10 Yaroslav Sidlovsky 2021-01-15 14:57:25 UTC
Ah, got it. Sorry.
Comment 11 Yaroslav Sidlovsky 2021-01-15 15:32:11 UTC
Created attachment 134895 [details]
b1cadeba939155282a9fadf7d7b025d6529c489e.patch

Added patch from commit b1cadeba939155282a9fadf7d7b025d6529c489e (https://invent.kde.org/system/dolphin/-/commit/b1cadeba939155282a9fadf7d7b025d6529c489e) slightly modified so it can be applied to the version 20.12.x.
Somehow works. Thanks to everyone!
Comment 12 Anton K 2021-01-16 05:25:22 UTC
You can now run knetattach from krunner or konsole.
It is useful as a solution to the problem here and now
Comment 13 Nate Graham 2021-01-19 03:18:06 UTC
Re-opening, we can't wait for 21.04 and will backport the feature to 20.12.2
Comment 14 Nate Graham 2021-01-19 03:18:21 UTC
*** Bug 431807 has been marked as a duplicate of this bug. ***
Comment 15 hatem 2021-01-19 05:53:19 UTC
(In reply to Nate Graham from comment #13)
> Re-opening, we can't wait for 21.04 and will backport the feature to 20.12.2

good decision 👍
Comment 16 Norbert Preining 2021-01-20 20:43:41 UTC
Git commit 33270dd4423eea329b8f20db17f8d70ab7b108da by Norbert Preining.
Committed on 18/01/2021 at 22:48.
Pushed by ngraham into branch 'release/20.12'.

Show button to open knetattach inline with URL nav on remove:// view

This is a backport of b1cadeba939155282a9fadf7d7b025d6529c489e

  From b1cadeba939155282a9fadf7d7b025d6529c489e Mon Sep 17 00:00:00 2001
  From: Nate Graham <nate@kde.org>
  Date: Tue, 15 Dec 2020 23:03:00 -0700
  Subject: [PATCH] Show button to open knetattach inline with URL nav on
   Remote:// view

  In conjunction with
  https://invent.kde.org/frameworks/kio/-/merge_requests/260,
  the net result is to hide the knetattach launcher in the view, and show
  it inline with Dolphin's URL navigator toolbar when viewing the
  remote:// view, just like how we add an "Empty Trash" button when
  viewing trash://.

The backport ensures that even with frameworks << 5.78 only one network
button is shown.

M  +61   -0    src/dolphinnavigatorswidgetaction.cpp
M  +19   -1    src/dolphinnavigatorswidgetaction.h

https://invent.kde.org/system/dolphin/commit/33270dd4423eea329b8f20db17f8d70ab7b108da